# DTLMod

./: .cfduplication.yml  .codefactor.yml  .gitignore  Brainstorm_and_TODOs.md  CMakeLists.txt  ChangeLog  CodeReview#4.md  Compression.html  Connection_manager.html  Decimation.html  Engines.html  FindDTLMod.cmake  Inside_File_engine.html  Inside_Staging_engine.html  Installing_DTLMod.html  Introduction.html  Logging.html  MANIFEST.in  New_project.html  Platform.html  README.md  Reduction.html  SANITIZERS_AND_VALGRIND.md  Workflow.html  app_API.html  app_Actors.html  app_Main.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  sonar-project.properties
.github/workflows/: build.yml  weekly-checks.yml
.sonarlint/: connectedMode.json
_sources/: Compression.rst.txt  Connection_manager.rst.txt  Inside_File_engine.rst.txt  Installing_DTLMod.rst.txt  Introduction.rst.txt  Logging.rst.txt  Platform.rst.txt  Workflow.rst.txt  app_API.rst.txt  app_Actors.rst.txt  app_Main.rst.txt  index.rst.txt
_static/css/: custom.css
api_user/: classdtlmod_1_1_d_t_l.html  classdtlmod_1_1_engine.html  classdtlmod_1_1_stream.html  classdtlmod_1_1_variable.html
conf/cmake/: Documentation.cmake  FindFSMod.cmake  Findnlohmann_json.cmake
conf/doxygen/: Doxyfile.in
doc/: Build.sh  requirements.txt
doc/scripts/: generate_rst.py
doc/source/: Connection_manager.rst  Decimation.rst  Doxyfile  Engines.rst  Inside_File_engine.rst  Inside_Staging_engine.rst  Installing_DTLMod.rst  Introduction.rst  Logging.rst  New_project.rst  Platform.rst  Reduction.rst  Workflow.rst  app_API.rst  app_Actors.rst  app_Main.rst  conf.py  index.rst  platform.cpp
include/: dtlmod.hpp
include/dtlmod/: ActorRegistry.hpp  CompressionReductionMethod.hpp  DTL.hpp  DTLException.hpp  DecimationReductionMethod.hpp  Engine.hpp  FileEngine.hpp  FileTransport.hpp  MailboxTransport.hpp  MessageQueueTransport.hpp  Metadata.hpp  ReductionMethod.hpp  StagingEngine.hpp  StagingMboxTransport.hpp  StagingMqTransport.hpp  StagingTransport.hpp  Stream.hpp  Transport.hpp  Variable.hpp  version.hpp.in
src/: CompressionReductionMethod.cpp  DTL.cpp  DecimationReductionMethod.cpp  Engine.cpp  FileEngine.cpp  FileTransport.cpp  MailboxTransport.cpp  MessageQueueTransport.cpp  Metadata.cpp  StagingEngine.cpp  StagingMboxTransport.cpp  StagingMqTransport.cpp  StagingTransport.cpp  Stream.cpp  Transport.cpp  Variable.cpp  dtlmod_version.cpp
src/bindings/python/: dtlmod_python.cpp
test/: DTL-config.json  dtl_cancel.cpp  dtl_config.cpp  dtl_connection.cpp  dtl_file_engine.cpp  dtl_reduction.cpp  dtl_staging_engine.cpp  dtl_stream.cpp  dtl_variable.cpp  main.cpp  test_util.hpp  valgrind.supp
test/python/: dtl_cancel.py  dtl_config.py  dtl_connection.py  dtl_file_engine.py  dtl_reduction.py  dtl_staging_engine.py  dtl_stream.py  dtl_variable.py  unit_tests_python.py
