[build-system]
requires = ["setuptools>=42", "wheel", "pybind11", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "dtlmod"
version = "0.2"
description = "A versatile simulated data transport layer SimGrid module"
authors = [
    { name = "The SWAT Team", email = "simgrid-community@inria.fr" }
]
readme = "README.md"
license = { text = "LGPL-2.1-only" }
requires-python = ">=3.7"
dependencies = [
    "pybind11>=2.4",
    "simgrid>=4.1",
    "fsmod>=0.4.0"
]
dependencies = ["pybind11>=2.4"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Systems Administration"
]

[project.urls]
Source = "https://github.com/simgrid/dtlmod"

[tool.setuptools]
zip-safe = false

#[tool.setuptools.ext_modules]
# This section is intentionally left blank because the actual extension is built via CMake
